Creando Estructura del Proyecto Componentes e Imgs

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">App Comic</h1>
+        <p class="lead">Esta es una Aplicación de Comics</p>
+    </div>
+</div>
