Creando rutas faltantes, animaciones y navegacion

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,6 @@
-<p>about works!</p>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4 animated fadeIn fast ">Esta es una App de Comics</h1>
+        <p class="lead animated fadeIn">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur modi harum sed laboriosam quas officia, provident corporis blanditiis amet nobis dolorum illo nam cum velit incidunt dicta quae repellat ut?</p>
+    </div>
+</div>
