--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid animated fadeIn">
     <div class="container">
         <h1 class="display-4">App Comic</h1>
         <p class="lead">Esta es una Aplicación de Comics</p>
