--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -12,11 +12,14 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <li class="nav-item" routerLinkActive="['active']">
+                <a class="nav-link" [routerLink]="['home']">Home</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
+            <li class="nav-item" routerLinkActive="['active']">
+                <a class="nav-link" [routerLink]="['heroes']">Heroes</a>
+            </li>
+            <li class="nav-item" routerLinkActive="['active']">
+                <a class="nav-link" [routerLink]="['about']">About</a>
             </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
