--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -7,7 +7,7 @@
             <h5 class="card-title">Card title</h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <button class="btn btn-outline-primary btn-block">
+            <button type="button" class="btn btn-outline-primary btn-block">
                 Ver mas
             </button>
         </div>
