Creando Vista Heroe y Recibiendo el Parametro por Ruta

--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -1,1 +1,15 @@
-<p>heroe works!</p>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <div class="row">
+            <div class="col animated fadeIn fast">
+                <img [src]="heroe.img" [alt]="heroe.nombre">
+            </div>
+            <div class="col animated fadeIn">
+                <h1 class="display-4">{{ heroe.nombre }}</h1>
+                <p class="lead">{{ heroe.bio }}</p>
+                <p>Casa: {{ heroe.aparicion }}</p>
+                <p>Casa: {{ heroe.casa }}</p>
+            </div>
+        </div>
+    </div>
+</div>
