Mostrando mensaje si no consigue resultado

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,15 +1,24 @@
-<h1>Heroes <small>Marvel y DC</small></h1>
+<h1>Buscando: <small>{{ texto }}</small></h1>
 <hr>
+
+<div *ngIf="heroes.length == 0" class="row">
+    <div class="col">
+        <div class="alert alert-info" role="alert">
+            No existen resultados con el texto: <b>{{texto}}</b>
+        </div>
+    </div>
+</div>
+
 <div class="card-columns">
-    <div class="card animated fadeIn fast" *ngFor="let heroe of heroes; let i = index">
+    <div class="card animated fadeIn" *ngFor="let heroe of heroes; let i = index">
         <img [src]="heroe.img" class="card-img-top" [alt]="heroe.nombre">
         <div class="card-body">
             <h5 class="card-title">{{ heroe.nombre }}</h5>
             <p class="card-text">{{ heroe.bio }}</p>
             <p class="card-text"><small class="text-muted">Aparición: {{ heroe.aparicion }}</small></p>
-            <!-- <button (click)="verHeroe( i )" type="button" class="btn btn-outline-primary btn-block">
+            <!--<button (click)="verHeroe( i )" type="button" class="btn btn-outline-primary btn-block">
                 Ver mas
-            </button> -->
+            </button>-->
         </div>
     </div>
 </div>
