--- a/src/app/components/heroe/heroe.component.html
+++ b/src/app/components/heroe/heroe.component.html
@@ -3,6 +3,7 @@
         <div class="row">
             <div class="col animated fadeIn fast">
                 <img [src]="heroe.img" [alt]="heroe.nombre">
+                <a [routerLink]="['/heroes']" class="btn btn-outline-danger btn-block">Regresar</a>
             </div>
             <div class="col animated fadeIn border">
                 <div class="col text-center">
